syntax = "proto3";
package execution;
option go_package = "github.com/cube2222/octosql/execution";
import "execution/record.proto";
import "google/protobuf/timestamp.proto";

message QueueElement {
    oneof type {
        Record record = 1;
        google.protobuf.Timestamp watermark = 2;
        bool endOfStream = 3;
        string error = 4;
    }
}